# ferro-hgvs

./: .claudeignore  .codecov.yml  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pixi.toml  pyproject.toml  release-plz.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: CODEOWNERS  actionlint.yaml
.github/workflows/: ci.yml  coverage.yml  deploy-local.yml  external-validation.yml  fuzz.yml  lint-workflows.yml  nightly-mutalyzer.yml  nightly-perf.yml  publish.yml  release-wheels.yml
benches/: baseline_head.rs  benchmarks.rs  normalize_e2e.rs  projection.rs
config/: service.example.toml
data/benchmark/: perf_results.json
docs/: BENCHMARK_GUIDE.md  BENCHMARK_RUNBOOK.md  BIOCOMMONS_LOCAL_SETUP.md  CI_PERF_GATE_DESIGN.md  CONFORMANCE_HARNESS_DESIGN.md  RECONSTRUCTION_POLICY_DESIGN.md  TRANSCRIPT_SEQUENCE_STORE_DESIGN.md  WEB_SERVICE_SETUP.md  python_reference_guide.md  tool_support_matrix.json  transcripts_json_schema.md
docs/spec/: error_code_audit.md
examples/: build_conformance_snapshot.rs  derive_ng_placements.rs  derive_tx_placements.rs  extract_biocommons_windows.rs  extract_mutalyzer_genomic_windows.rs  extract_spec_enumeration_windows.rs  generate_conformance_summary.rs  generate_perf_tables.rs  generate_spec_citations.rs  generate_spec_enumeration.rs  generate_spec_fixture.rs  generate_tool_support_tables.rs  projector-bench.rs  report_conformance_reference_gaps.rs
examples/common/: recording.rs  spec_harvest.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_hgvs.rs  fuzz_structured_hgvs.rs
python/ferro_hgvs/: __init__.py  __init__.pyi
scripts/: README.md  benchmark_python.py  build_spec_normalization_fixture.py  classify-mutalyzer-normalized-fails.py  extract_hgvs_spec_examples.py  extract_mutalyzer_github.py  fetch_ncbi_variation.py  fetch_variantvalidator.py  refresh-biocommons-fixtures.py  refresh-hgvs-rs-projection-fixtures.py  refresh-mutalyzer-fixtures.py
scripts/perf/: README.md  sweep_tags.sh
src/: cache.rs  config.rs  diagnostic.rs  error.rs  lib.rs  mutalyzer.rs  parallel.rs  python.rs  python_helpers.rs  sequence.rs
src/arbitrate/: bug_report.rs  category.rs  mod.rs  oracle.rs  predicates.rs  spec_citations.json  spec_citations.rs
src/backtranslate/: codon.rs  mod.rs
src/batch/: mod.rs  processor.rs
src/benchmark/: accessions.rs  arbitration.rs  biocommons.rs  cache.rs  cli.rs  collate.rs  compare.rs  extract.rs  hgvs_rs.rs  inmemory_provider.rs  mod.rs  mutalyzer.rs  normalize.rs  parse.rs  perf_matrix.rs  report.rs  runner.rs  sample.rs  shard.rs  translate.rs  types.rs  uta_loader.rs  workflow.rs
src/check/: mod.rs
src/cli/: format.rs  mod.rs  parse.rs  project.rs  sequence.rs
src/clinvar/: client.rs  mod.rs  types.rs
src/commands/: mod.rs
src/conformance/: accession_inventory.rs  biocommons.rs  hgvs_rs_projection.rs  mod.rs  mutalyzer.rs  reference_snapshot.rs  reference_window.rs  schema.rs  spec_enumeration.rs  spec_projection.rs  summary.rs
src/convert/: coding.rs  genomic.rs  mapper.rs  mod.rs  noncoding.rs  protein.rs
src/coords/: mod.rs
src/data/: cdot.rs  exon_realign.rs  mapping.rs  mod.rs  projection.rs
src/effect/: mod.rs
src/equivalence/: checker.rs  mod.rs
src/error_handling/: codes.rs  corrections.rs  info_map.rs  mod.rs  mutalyzer_map.rs  preprocessor.rs  registry.rs  types.rs
src/extractor/: align.rs  classify.rs  generate.rs  mod.rs
src/hgvs/: edit.rs  interval.rs  location.rs  mod.rs  uncertainty.rs  validation.rs  variant.rs  version.rs
src/legacy/: ivs.rs  mod.rs  protein.rs  substitution.rs
src/liftover/: aliases.rs  assembly_report.rs  chain.rs  lift.rs  mod.rs
src/mave/: context.rs  mod.rs  parser.rs
src/normalize/: boundary.rs  config.rs  merge.rs  mod.rs  overlap.rs  rules.rs  shuffle.rs  validate.rs
src/perf_table/: mod.rs
src/prepare/: backfill.rs  identity.rs  manifest.rs  mod.rs
src/project/: accession.rs  edit.rs  mod.rs  projector.rs  protein.rs  result.rs  rna.rs  transcript_axis.rs
src/reference/: authoritative.rs  derived_placement.rs  derived_tx_structure.rs  fasta.rs  legacy_selector.rs  loader.rs  mock.rs  mod.rs  multi_fasta.rs  ng_hosted_transcripts.rs  ng_placement_builder.rs  protein.rs  provider.rs  transcript.rs  validate.rs
src/rsid/: mod.rs  vcf.rs
src/service/: config.rs  mod.rs  server.rs  types.rs  validation.rs
src/spdi/: convert.rs  mod.rs  parser.rs
src/tool_support/: mod.rs
src/vcf/: annotate.rs  annotator.rs  batch.rs  from_hgvs.rs  mod.rs  parser.rs  record.rs  to_hgvs.rs
tests/: allele_grammar_corners.rs  allele_trans_phase.rs  annotation_real_format_slices.rs  api_comparison_tests.rs  biocommons_local_tests.rs  biocommons_normalize_tests.rs  biocommons_tests.rs  boundary_tests.rs  breakpoint_insertion.rs  bulk_fixture_tests.rs  civic_validation.rs  cli_parallel_annotate.rs  cli_parallel_normalize.rs  cli_parallel_parse.rs  clinical_genes_tests.rs  clinvar_hgvs_tests.rs  clinvar_tests.rs  clinvar_validation.rs  cmrg_exhaustive_tests.rs  comma_products_allele.rs  compound_cross_reference.rs  comprehensive_edge_case_tests.rs  con_conversion_audit.rs  conformance_reference_snapshot_tests.rs  coordinate_boundary_tests.rs  coverage_gap_tests.rs  dbsnp_tests.rs  del_shift_matrix.rs  dup_shift_matrix.rs  edge_case_notation_tests.rs  error_code_audit.rs  error_mode_tests.rs  exac_validation.rs  external_pattern_analysis.rs  external_pattern_tests.rs  fast_path_differential.proptest-regressions  fast_path_differential.rs  fast_path_drift_scope.rs  gene_selector_display_preserve.rs  gene_selector_roundtrip.rs  (+142 more)
tests/common/: failure_expectations.rs  mod.rs  synthetic.rs
tests/fixtures/: CORPUS_LAYOUT.md  README.md  SCHEMAS.md  arbitration.json  comprehensive_edge_cases.json  error_code_audit.json
tests/it/: allele_grammar_corners.rs  allele_unknown_phase.rs  and_or_of_alleles.rs  annotation_cross_format.rs  annotation_tool_conformance.rs  arbitrate_cli.rs  arbitration_corpus.rs  (+230 more)
(+157 files in other folders)
