[package]
name = "ferro-hgvs"
version = "0.1.0"
edition = "2021"
authors = ["ferro-hgvs contributors"]
description = "HGVS variant normalizer - part of the ferro bioinformatics toolkit"
license = "MIT"
repository = "https://github.com/fulcrumgenomics/ferro-hgvs"
keywords = ["hgvs", "variant", "normalization", "bioinformatics"]
categories = ["science", "command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/fulcrumgenomics/ferro-hgvs"
exclude = [
    "tests/fixtures/bulk/*.gz",
    "tests/fixtures/validation/*_exhaustive.json.gz",
    "/vendor/",
    "/fuzz/",
    "/scripts/",
    "/python/",
    "/docs/",
    "/data/",
    "/.github/",
    "/.githooks/",
    "/acgt-landing/",
]

[lib]
name = "ferro_hgvs"
# cdylib is required for Python bindings (built via maturin)
crate-type = ["cdylib", "lib"]

[dependencies]
nom = "8.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
noodles-vcf = "0.73"
flate2 = "1.0"
ahash = { version = "0.8", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
memmap2 = { version = "0.9", optional = true }
memchr = "2.7"
ureq = { version = "2.9", optional = true }
atty = "0.2"
log = "0.4"
# Core dependencies for prepare/check/commands (now part of main binary)
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream", "gzip", "deflate"] }
url = "2.4"
regex = "1.10"
once_cell = "1.20"

[features]
default = []
dhat-heap = ["dep:dhat"]
parallel = ["dep:rayon"]
validation = ["dep:ahash"]
python = ["dep:pyo3"]
mmap = ["dep:memmap2"]
protein-fetch = ["dep:ureq"]
benchmark = ["dep:rayon", "dep:num_cpus", "dep:urlencoding", "dep:rand", "dep:tempfile", "protein-fetch", "dep:tokio", "dep:tokio-postgres", "dep:bytes", "dep:futures-util", "dep:rusqlite"]
# hgvs-rs integration for native Rust HGVS normalization comparison
hgvs-rs = ["benchmark", "dep:hgvs"]
# Web service for multi-tool HGVS variant normalization
web-service = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:toml", "dep:async-trait", "dep:urlencoding", "dep:open", "benchmark"]
# Long-running tests (e.g., full ClinVar validation). Run with: cargo test --release --features slow-tests
slow-tests = []
# dev feature includes all testable features (python requires maturin for building)
dev = ["validation", "mmap", "benchmark", "parallel", "protein-fetch", "web-service"]

[dependencies.dhat]
version = "0.3"
optional = true

[dependencies.rayon]
version = "1.10"
optional = true


[dependencies.num_cpus]
version = "1.16"
optional = true

[dependencies.urlencoding]
version = "2.1"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.tempfile]
version = "3.14"
optional = true

[dependencies.hgvs]
version = "0.19"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-util", "net"]
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true

[dependencies.bytes]
version = "1.5"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.rusqlite]
version = "0.31"
optional = true

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.tower-http]
version = "0.4"
features = ["cors", "trace"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

[dependencies.toml]
version = "0.8"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.open]
version = "5"
optional = true

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
flate2 = "1.0"
tempfile = "3.14"
rstest = "0.23"

[[bin]]
name = "ferro"
path = "src/bin/ferro.rs"

[[bin]]
name = "ferro-benchmark"
path = "src/bin/benchmark.rs"
required-features = ["benchmark"]

[[bin]]
name = "ferro-web"
path = "src/bin/ferro-web.rs"
required-features = ["web-service"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1

# Use vendored hgvs-rs with NR_ transcript fix until PR is merged upstream
# PR: https://github.com/varfish-org/hgvs-rs/pull/256
[patch.crates-io]
hgvs = { path = "vendor/hgvs-rs" }
