[package]
name = "ferro-hgvs"
version = "0.8.1"
edition = "2021"
rust-version = "1.87"
authors = ["ferro-hgvs contributors"]
description = "HGVS variant normalizer - part of the ferro bioinformatics toolkit"
license = "MIT"
repository = "https://github.com/fulcrumgenomics/ferro-hgvs"
keywords = ["hgvs", "variant", "normalization", "bioinformatics"]
categories = ["science", "command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/fulcrumgenomics/ferro-hgvs"
exclude = [
    "tests/fixtures/bulk/*.gz",
    "tests/fixtures/validation/*_exhaustive.json.gz",
    "/vendor/",
    "/fuzz/",
    "/scripts/",
    "/python/",
    "/docs/",
    "/data/",
    "/assets/",
    "/.github/",
    "/.githooks/",
    "/acgt-landing/",
]

[lib]
name = "ferro_hgvs"
# cdylib is required for Python bindings (built via maturin)
crate-type = ["cdylib", "lib"]

[dependencies]
nom = "8.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
noodles-vcf = "0.73"
noodles-gff = "0.57"
noodles-gtf = "0.52"
smol_str = { version = "0.3", features = ["serde"] }
flate2 = "1.0"
ahash = { version = "0.8", optional = true }
pyo3 = { version = "0.28", features = ["abi3-py310", "extension-module"], optional = true }
memmap2 = "0.9"
memchr = "2.7"
ureq = { version = "2.9", optional = true }
atty = "0.2"
log = "0.4"
# Core dependencies for prepare/check/commands (now part of main binary)
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "gzip", "deflate", "http2", "rustls-tls", "macos-system-configuration"] }
url = "2.4"
regex = "1.10"
once_cell = "1.20"
superintervals = "0.3"
rkyv = "0.8"
rustc-hash = "2"
lru = "0.12.5"

[features]
default = []
dhat-heap = ["dep:dhat"]
# rayon is now an unconditional dependency (the CLI `-j` batch drivers use it);
# this feature is retained as a no-op alias and to gate the library `parallel`
# module's public API.
parallel = []
validation = ["dep:ahash"]
# The Python batch API parallelizes across a rayon pool, so the `parallel`
# (rayon) feature is pulled in whenever the bindings are built.
python = ["dep:pyo3", "parallel"]
# memmap2 is now an unconditional dependency (used by the cdot rkyv loader);
# this feature is retained as a no-op for compatibility with callers that
# still pass `--features mmap`.
mmap = []
protein-fetch = ["dep:ureq"]
benchmark = ["dep:num_cpus", "dep:urlencoding", "dep:rand", "dep:tempfile", "protein-fetch", "dep:tokio", "dep:tokio-postgres", "dep:bytes", "dep:futures-util", "dep:rusqlite"]
# hgvs-rs integration for native Rust HGVS normalization comparison
hgvs-rs = ["benchmark", "dep:hgvs", "dep:postgres", "dep:biocommons-bioutils", "dep:indexmap", "dep:seqrepo"]
# Web service for multi-tool HGVS variant normalization
web-service = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:toml", "dep:async-trait", "dep:urlencoding", "dep:open", "benchmark"]
# Long-running tests (e.g., full ClinVar validation). Run with: cargo test --release --features slow-tests
slow-tests = []
# dev feature includes all testable features (python requires maturin for building)
dev = ["validation", "mmap", "benchmark", "parallel", "protein-fetch", "web-service"]

[dependencies.dhat]
version = "0.3"
optional = true

[dependencies.rayon]
version = "1.10"


[dependencies.num_cpus]
version = "1.16"
optional = true

[dependencies.urlencoding]
version = "2.1"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.tempfile]
version = "3.14"
optional = true

[dependencies.hgvs]
version = "0.22"
optional = true

[dependencies.postgres]
version = "0.19"
optional = true

[dependencies.biocommons-bioutils]
version = "0.2"
optional = true

[dependencies.indexmap]
version = "2"
optional = true

[dependencies.seqrepo]
version = "0.10"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-util", "net"]
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true

[dependencies.bytes]
version = "1.5"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.rusqlite]
version = "0.31"
optional = true

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.tower-http]
version = "0.4"
features = ["cors", "trace"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

[dependencies.toml]
version = "0.8"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.open]
version = "5"
optional = true

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
flate2 = "1.0"
tempfile = "3.14"
rstest = "0.23"
# Used by examples/generate_spec_fixture.rs to extract HGVS strings from the
# vendored v21.0 spec. Examples (unlike binaries under src/bin) have access to
# dev-dependencies, so these stay out of the runtime dependency tree.
pulldown-cmark = { version = "0.13", default-features = false }
serde_yaml = "0.9"
anyhow = "1"
# Used by examples/build_conformance_snapshot.rs to record a per-entry SHA-256 of
# the harvested bases (snapshot provenance). Examples have access to
# dev-dependencies, so this stays out of the runtime dependency tree.
sha2 = "0.10"

[[example]]
name = "build_conformance_snapshot"
required-features = ["dev"]

[[example]]
name = "derive_ng_placements"
required-features = ["dev"]

[[example]]
name = "extract_mutalyzer_genomic_windows"
required-features = ["dev"]

[[example]]
name = "generate_tool_support_tables"
required-features = ["dev"]

[[example]]
name = "generate_perf_tables"
required-features = ["dev"]

[[bin]]
name = "ferro"
path = "src/bin/ferro.rs"

[[bin]]
name = "ferro-benchmark"
path = "src/bin/benchmark.rs"
required-features = ["benchmark"]

[[bin]]
name = "ferro-web"
path = "src/bin/ferro-web.rs"
required-features = ["web-service"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "projection"
harness = false

[[bench]]
name = "baseline_head"
harness = false

[profile.release]
lto = true
codegen-units = 1

# Optimize the heavy dependencies that the bulk-fixture parser tests
# (clinvar_hgvs_*, cmrg_exhaustive, paraphase_exhaustive) hit hard:
# gzip decoding (miniz_oxide via flate2) and JSON deserialization
# (serde_json deserialize_seed paths). The test-crate code itself stays
# at default debug optimization so build times for ferro-hgvs and the
# test binaries are unaffected.
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.serde_json]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
