[package]
name = "ferro-hgvs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.ferro-hgvs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_parse_hgvs"
path = "fuzz_targets/fuzz_parse_hgvs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured_hgvs"
path = "fuzz_targets/fuzz_structured_hgvs.rs"
test = false
doc = false
bench = false
